<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.mechenbier.circuittester.MainActivity">

    <ImageView
        android:id="@+id/image_powerstate"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/image_powerstate_content_description"
        android:src="@drawable/bolt" />

    <FrameLayout
        android:id="@+id/rating_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_below="@+id/image_powerstate"
        android:layout_marginTop="15dp"
        android:visibility="invisible">

        <View
            android:id="@+id/rating_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/enjoying_circuit_tester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rating_enjoying_app_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/button_enjoying_no"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_border"
            android:text="@string/rating_not_really"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:onClick="onRatingNotEnjoyingButtonClicked"/>

        <Button
            android:id="@+id/button_enjoying_yes"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_white"
            android:text="@string/rating_yes"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:onClick="onRatingYesEnjoyingButtonClicked"/>

        <TextView
            android:id="@+id/feedback_circuit_tester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rating_feedback_app_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_feedback_no"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_border"
            android:text="@string/rating_no_thanks"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:visibility="invisible"
            android:onClick="onRatingNoFeedbackButtonClicked" />

        <Button
            android:id="@+id/button_feedback_yes"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_white"
            android:text="@string/rating_ok_sure"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:onClick="onRatingYesFeedbackButtonClicked" />

        <TextView
            android:id="@+id/rate_circuit_tester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rating_rating_app_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_rating_no"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_border"
            android:text="@string/rating_no_thanks"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:visibility="invisible"
            android:onClick="onRatingNoRatingButtonClicked" />

        <Button
            android:id="@+id/button_rating_yes"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_white"
            android:text="@string/rating_ok_sure"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:onClick="onRatingYesRatingButtonClicked" />

    </FrameLayout>

    <TextView
        android:id="@+id/text_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rg_invert"
        android:layout_marginBottom="10dp"
        android:text="@string/warning"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/rg_invert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_toLeftOf="@+id/toggle_mute"
        android:layout_toStartOf="@+id/toggle_mute">

        <RadioButton
            android:id="@+id/rb_sound_when_powered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/invert_radio_invert" />

        <RadioButton
            android:id="@+id/rb_sound_when_not_powered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/invert_radio_uninvert" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggle_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:checked="false"
        android:text="New ToggleButton"
        android:textOff="@string/mute_button_unmuted"
        android:textOn="@string/mute_button_muted"
        android:onClick="onMuteToggleButtonClicked"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_ad_unit_api_key"
    />

</RelativeLayout>